# faxum-admin

./: .env  Cargo.toml  README.md
docs/sql/system/: sys_role.sql
docs/test/system/: sys_user.http
src/: main.rs  schema.rs
src/common/: result.rs
src/handler/: menu_handler.rs  role_handler.rs  user_handler.rs
src/handler/system/: menu_handler.rs  role_handler.rs  sys_menu_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/model/: user.rs  user_role.rs
src/model/system/: menu.rs  role.rs  role_menu.rs  sys_menu.rs  sys_menu_model.rs  sys_user.rs  sys_user_model.rs  user.rs
src/route/system/: sys_menu_route.rs  sys_role_route.rs  sys_user_route.rs
src/utils/: jwt_util.rs  mod.rs
src/vo/: mod.rs  role_vo.rs
src/vo/system/: sys_menu_vo.rs
