[package]
name = "axum-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }

diesel = { version = "2.2", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std", "serde"] }

r2d2 = "0.8"
once_cell = "1.18.0"

log = "0.4"
log4rs = "1.0"

jsonwebtoken = "9.3.0"

redis = "0.27.2"

thiserror = "2.0.3"